fixed misaligned layout on mobile for portfolio section

--- a/css/agency.css
+++ b/css/agency.css
@@ -371,6 +371,7 @@ section h3.section-subheading {
   list-style: none;
   padding: 0;
   position: relative;
+  margin: 0 auto;
 }
 .timeline:before {
   top: 0;
